v0.6.9 - November 7, 2020

  - fix tiles crash in py39 due to xml removed method, thanks JJ1SLR for bug report
  - fix custom_clocks compat py2, py34
  - euclid bugfixes and two new methods for Vector2: angle_oriented and determinant
  - eliminated ugly black padding when resizing a window created with autoscale=True
  - refactor window geometry info in director; also get_window_size now returns real size if autoscale==False
  - fix custom_clocks broken by pyglet 1.5.3
  - removed deprecated features in Director, see compatibility notes in the docs
  - tmx map can use tilesets with an image per tile (WIP, may need adjustments in layer)
  - all tmx properties are parsed and loaded with the correct types
  - fix handling paths in tmx files, covered map to tileset to image
  - clean termination for test with py38 and pyglet 1.4+. #334

v0.6.8 - January 31, 2020

  - removed py 3.4 and 2.7 from testing, added py 3.8
  - replaced pyglet_ffmpeg with pyglet_ffmpeg2 (thanks chcarmen)
  - fixed ColorLayer crash when changing colors, #330, thanks MartinHowarth
  - unpinned pyglet version, they are releasing fast. accept 1.4 >= 1.4.10, 1.5.x, < 2 
  
v0.6.7 - September 6, 2019 

  - fixed compatibility with pyglet 1.4.x, needs at least pyglet 1.4.3 

v0.6.6 - August 15, 2019

  - pip or setuptools will request pyglet >=1.2 and <1.4
  - pyglet version checked when importing cocos, terminate if out of range
  - py 3.3 and py 2.6 support dropped 
  - collision manager honors promises to accept non-known objects, #300
  
v0.6.5 - August 24, 2017

  - First cocos release compatible with pyglet 1.3 (tested against 1.3.0rc1)
  - Fix cocos.draw compatibility with pyglet master, #288  
  - Fix Cannot pass keyword args to pyglet.Sprite, #274
  - Fix issue HMTLLabel does not show img, #276
  - fix bad texture clamping in tiles, crashing sometimes, #272 thanks FluffyInkie 

v0.6.4 - June 12, 2016

  - moved SequenceScene from cocos.utils to cocos.scenes.sequences